--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,6 +26,6 @@ spec:
     spec:
       containers:
         - name: todo-app
-          image: gcr.io/tech-rnd-project/faz-todo:tagversion
+          image: gcr.io/tech-rnd-project/faz-todo
           ports:
             - containerPort: 3000
