--- a/deployment.yaml
+++ b/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: todo-app
 spec:
   selector:
-    app: knote
+    app: todo-app
   ports:
     - port: 3000
       targetPort: 3000
